ICE-6204 add ACE resource bundle entries for localising the buttons' text; renamed the CSS classes of the buttons to better integrate with the existing fileentry pattern; fixed issue in FF and IE with button misalignment; avoided displaying buttons in no script case to allow the native input type=file element to be displayed; renamed the 'cancel upload, reset form' button to simply 'cancel upload' and made it a button type=button, instead of a button type=reset, and added a call to the clearFileSelection() function

--- a/icefaces3/trunk/icefaces/ace/component/resources/icefaces.ace/fileentry/fileEntry.css
+++ b/icefaces3/trunk/icefaces/ace/component/resources/icefaces.ace/fileentry/fileEntry.css
@@ -35,6 +35,7 @@
 .ice-file-entry .multiple-select-table {
     border-collapse:collapse;
 }
+
 .ice-file-entry .multiple-select-table tr > td {
     border-color:inherit;
     border-style:solid;
@@ -43,11 +44,12 @@
     text-align: center;
 }
 
-.fileinput-button {
+.ice-file-entry .add-files {
     position: relative;
     overflow: hidden;
 }
-.fileinput-button input {
+
+.ice-file-entry .add-files input {
     position: absolute;
     top: 0;
     right: 0;
@@ -59,12 +61,17 @@
     direction: ltr;
     cursor: pointer;
 }
-.fileupload-buttonbar .btn,
-.fileupload-buttonbar .toggle {
+
+.ice-file-entry .start, .ice-file-entry .cancel {
+	vertical-align: top;
+}
+/*
+.ice-file-entry .buttonbar .btn,
+.ice-file-entry .buttonbar .toggle {
     margin-bottom: 5px;
 }
 
-.fileupload-loading {
+.ice-file-entry .loading {
     float: right;
     width: 32px;
     height: 32px;
@@ -72,6 +79,8 @@
     background-size: contain;
     display: none;
 }
-.fileupload-processing .fileupload-loading {
+
+.ice-file-entry .processing .loading {
     display: block;
 }
+*/
